The paper is added.

--- a/README.html
+++ b/README.html
@@ -13,7 +13,7 @@
 <body>
 
 <h1 id="low-dimensional-interpretable-kernels-with-conic-discriminant-functions-for-classification">Low-dimensional Interpretable Kernels with Conic Discriminant Functions for Classification</h1>
-<p>In this study, we propose several simple feature maps that lead to a collection of interpretable kernels with varying degrees of freedom. We make sure that the increase in the dimension of input data with each proposed feature map is extremely low, so that the resulting models can be trained quickly, and the obtained results can easily be interpreted.</p>
+<p>We propose several simple feature maps that lead to a collection of interpretable kernels with varying degrees of freedom. We make sure that the increase in the dimension of input data with each proposed feature map is extremely low, so that the resulting models can be trained quickly, and the obtained results can easily be interpreted. The details of this study is given in our <a href="./InterpretableConicKernels.pdf">paper</a>.</p>
 <h1 id="required-packages">Required packages</h1>
 <p>All our codes are implemented in Pyhton 3.7 and we use the following packages:</p>
 <ol type="1">
