--- a/README.html
+++ b/README.html
@@ -25,10 +25,10 @@
 <p>We provide the following tutorials to demonstrate our implementation.</p>
 <ul>
 <li><p>For the proposed feature maps, we refer to the pages <a href="./FeatureMaps.html">FeatureMaps</a> and <a href="./Kernels.html">Kernels</a>. We also provide the same tutorials as two notebooks, <a href="./FeatureMaps.ipynb">notebook one</a> and <a href="./Kernels.ipynb">notebook two</a>, respectively.</p></li>
-<li><p>To obtain a row of Table 1, we refer to the page <a href="./Table_1.html">Table 1</a> or to the <a href="./Table_1.ipynb">notebook</a>.</p></li>
+<li><p>To obtain a row of Table 1, we refer to page <a href="./Table_1.html">Table 1</a> or to the <a href="./Table_1.ipynb">notebook</a>.</p></li>
 <li><p>To obtain a row of Table 2 and Table 3, we refer to the page <a href="./Table_2_3.html">Table_2_3</a> or to the <a href="./Table_2_3.ipynb">notebook</a>.</p></li>
-<li><p>To obtain Figure 3, we refer to the page <a href="./Figure_3.html">Figure_3</a> or to the <a href="./Figure_3.ipynb">notebook</a>.</p></li>
-<li><p>To obtain Figure 5, we refer to the page <a href="./Figure_5.html">Figure_5</a> or to the <a href="./Figure_5.ipynb">notebook</a>.</p></li>
+<li><p>To obtain Figure 3, we refer to page <a href="./Figure_3.html">Figure_3</a> or to the <a href="./Figure_3.ipynb">notebook</a>.</p></li>
+<li><p>To obtain Figure 5, we refer to page <a href="./Figure_5.html">Figure_5</a> or to the <a href="./Figure_5.ipynb">notebook</a>.</p></li>
 </ul>
 <h1 id="reproducing-our-results">Reproducing our results</h1>
 <p>We provide the following scripts to reproduce the numerical experiments that we have reported in our paper.</p>
@@ -43,7 +43,7 @@
 <h1 id="other-tutorials-with-various-machine-learning-problems-work-in-progress">Other tutorials with various machine learning problems (work-in-progress)</h1>
 <ul>
 <li><p><a href="./LogisticRegression.html">In this tutorial</a>, we explain how to apply the proposed feature maps with <strong>logistic regression</strong> on binary and multi-class classificiation problems. Notebook version of this tutorial can be found <a href="./LogisticRegression.ipynb">here</a>.</p></li>
-<li><p>We also provide the following code snippets that reproduce Tables 2-3 and Figure 5 in our paper but this time with logistic regression.</p>
+<li><p>We also provide the following code snippets that reproduce Tables 2-3 and Figure 5 in our paper, but this time, with logistic regression.</p>
 <ul>
 <li><a href="./LR_Table_2_3_Run.py">Table_2_3_LR_Run.py</a></li>
 <li><a href="./Figure_5_Phoneme_LR.py">Figure_5_Phoneme_LR_Run.py</a></li>
