--- a/README.html
+++ b/README.html
@@ -25,10 +25,10 @@
 <p>We provide the following tutorials to demonstrate our implementation.</p>
 <ul>
 <li><p>For the proposed feature maps, we refer to the pages <a href="./FeatureMaps.html">FeatureMaps</a> and <a href="./Kernels.html">Kernels</a>. We also provide the same tutorials as two notebooks, <a href="./FeatureMaps.ipynb">notebook one</a> and <a href="./Kernels.ipynb">notebook two</a>, respectively.</p></li>
-<li><p>To obtain a row of Table 1, we refer to page <a href="./Table_1.html">Table 1</a> or to the <a href="./Table_1.ipynb">notebook</a>.</p></li>
+<li><p>To obtain a row of Table 1, we refer to the page <a href="./Table_1.html">Table 1</a> or to the <a href="./Table_1.ipynb">notebook</a>.</p></li>
 <li><p>To obtain a row of Table 2 and Table 3, we refer to the page <a href="./Table_2_3.html">Table_2_3</a> or to the <a href="./Table_2_3.ipynb">notebook</a>.</p></li>
-<li><p>To obtain Figure 3, we refer to page <a href="./Figure_3.html">Figure_3</a> or to the <a href="./Figure_3.ipynb">notebook</a>.</p></li>
-<li><p>To obtain Figure 5, we refer to page <a href="./Figure_5.html">Figure_5</a> or to the <a href="./Figure_5.ipynb">notebook</a>.</p></li>
+<li><p>To obtain Figure 3, we refer to the page <a href="./Figure_3.html">Figure_3</a> or to the <a href="./Figure_3.ipynb">notebook</a>.</p></li>
+<li><p>To obtain Figure 5, we refer to the page <a href="./Figure_5.html">Figure_5</a> or to the <a href="./Figure_5.ipynb">notebook</a>.</p></li>
 </ul>
 <h1 id="reproducing-our-results">Reproducing our results</h1>
 <p>We provide the following scripts to reproduce the numerical experiments that we have reported in our paper.</p>
